Fix clipboard paste: add clipboardRead permission

--- a/QiStuidioCurl/manifest.json
+++ b/QiStuidioCurl/manifest.json
@@ -7,7 +7,8 @@
     "activeTab",
     "tabs",
     "storage",
-    "scripting"
+    "scripting",
+    "clipboardRead"
   ],
   "host_permissions": [
     "<all_urls>"
